--- a/src/app/evolves-how/evolves-how.component.css
+++ b/src/app/evolves-how/evolves-how.component.css
@@ -2,3 +2,7 @@
     display: block;
     margin: 0;
 }
+
+h3 {
+    color: #000000 !important;
+}
